fix: use breakpoint and spacing values directly

--- a/src/components/Notifications/ToastNotification/Toast.scss
+++ b/src/components/Notifications/ToastNotification/Toast.scss
@@ -1,5 +1,3 @@
-@import "vanilla-framework/scss/settings";
-
 .toast-animate {
   position: relative;
   z-index: 101;
@@ -12,21 +10,21 @@
   position: absolute;
   right: 0;
 
-  @media screen and (min-width: $breakpoint-small) and (max-width: $breakpoint-large) {
+  @media screen and (min-width: 620px) and (max-width: 1036px) {
     width: 500px;
   }
 
-  @media screen and (min-width: $breakpoint-large) {
+  @media screen and (min-width: 1036px) {
     width: 600px;
   }
 }
 
 .toast-notification {
-  box-shadow: 0 0 calc($sp-unit * 4) $sp-unit rgb(0 0 0 / 15%);
+  box-shadow: 0 0 2rem 0.5rem rgb(0 0 0 / 15%);
   overflow: hidden;
   z-index: 101;
 
-  @media screen and (max-width: $breakpoint-small) {
+  @media screen and (max-width: 620px) {
     left: 0;
     margin: 1.5rem auto;
     max-width: 400px;
@@ -36,7 +34,7 @@
 
 .toast-notification-list {
   background-color: white;
-  box-shadow: 0 0 calc($sp-unit * 4) $sp-unit rgb(0 0 0 / 22%);
+  box-shadow: 0 0 2rem 0.5rem rgb(0 0 0 / 22%);
   max-height: calc(100vh - 4.5rem);
   overflow: auto;
   padding: 0 0.5rem;
@@ -65,7 +63,7 @@
       .dismiss-text {
         align-items: center;
         display: flex;
-        gap: $sph--x-small;
+        gap: 0.25rem;
       }
     }
 
@@ -76,9 +74,9 @@
         align-items: center;
         border: none;
         display: flex;
-        gap: $sph--x-small;
+        gap: 0.25rem;
         justify-content: center;
-        margin-right: $sph--small !important;
+        margin-right: 0.5rem !important;
         padding: calc(0.4rem - 1px);
 
         /* stylelint-disable max-nesting-depth */
@@ -91,7 +89,7 @@
       }
     }
 
-    @media screen and (max-width: $breakpoint-small) {
+    @media screen and (max-width: 620px) {
       align-items: flex-start;
       flex-direction: column;
       gap: 0.5rem;
@@ -99,7 +97,7 @@
     }
   }
 
-  @media screen and (max-width: $breakpoint-small) {
+  @media screen and (max-width: 620px) {
     bottom: 2rem;
     left: 0;
     margin: 1.5rem auto;
